--- a/server/public/css/drink.css
+++ b/server/public/css/drink.css
@@ -117,3 +117,119 @@
     font-family: "행복고흥B";
     font-size: 60px;
 }
+
+
+/* 드링크 */
+.drink-all{
+    border-top:1px solid #a33333;
+    margin: 0 auto;
+    width:1320px;
+}
+.drink{
+    border-bottom:1px solid #eee;
+    width:1300px;
+    height:100px;
+    display: flex;
+}
+.drink-num{
+    width:50px;
+    text-align: center;
+    line-height: 100px;
+    font-size:24px;
+}
+.drink-photo{
+    width:100px;
+}
+.drink-photo img{
+    margin:10px 10px;
+    width:80%;
+    height:80%;
+}
+.drink-content{
+    width:1130px;
+    display: flex;
+    flex-direction: column;
+    margin-left:30px;
+    margin-top:5px;
+}
+.drink-name{
+    margin-top:10px;
+    height:20px;
+    font-size:18px;
+}
+.drink-raw{
+    height:20px;
+    font-size:14px;
+    color:#333;
+    margin-bottom:10px;
+}
+
+.drink-raw + div{
+    display:flex;
+    font-size:16px;
+    text-align: center;
+}
+
+.drink-raw + div span{
+    width:50px;
+}
+.drink-ml{
+    width:100px;
+    height:20px;
+}
+.drink-c{
+    width:80px;
+    height:20px;
+}
+.drink-score{
+    width:80px;
+    height:20px;
+}
+
+/* 버튼 */
+.drink-button{
+    border-top:1px solid #a33333;
+    width:1320px;
+    margin:0 auto;
+    padding-top:30px;
+}
+.drink-button ul{
+    display:flex;
+    justify-content: center;
+}
+.drink-button ul li{
+    margin-left:5px;
+    margin-right:5px;
+    width:30px;
+    height:30px;
+    border:1px solid #a33333;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 30px;
+    font-size:16px;
+    cursor: pointer;
+}
+
+.drink-button a{
+    padding:10px;
+}
+
+.drink-button ul li:hover{
+    background-color: #a33333;
+}
+
+.drink-button a{
+    color:black !important;
+}
+
+.drink-button a:hover{
+    color:white !important;
+
+}
+.drink-button .active{
+    background-color: #a33333;
+}
+.drink-button .active span{
+    color:white;
+}
+
