--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -71,9 +71,9 @@
                     <img class="head-logo" src="../img/logo.png" alt="#">
                     </a>
                     <ul class="nav">
-                        <li class="scroll-to-section"><a href="introduction.html">Introduction</a></li>
+                        <li class="scroll-to-section"><a href="introduction.ejs">Introduction</a></li>
                         <li class="scroll-to-section" id="item"><a href="map.html">Recommendation</a></li>
-                        <li class="scroll-to-section"><a href="drink.ejs">Drinks</a></li>
+                        <li class="scroll-to-section"><a href="http://localhost:3000/drink/page=1">Drinks</a></li>
                         <li class="scroll-to-section"><a href="community.ejs">Community</a></li>
                         <!--<li class="scroll-to-section"><a href="#Review">Review</a></li>-->
                         <!--<li class="scroll-to-section"><div class="border-first-button"><a href="#contact">Free Quote</a></div></li> -->
