--- a/server/public/css/drink.css
+++ b/server/public/css/drink.css
@@ -36,20 +36,20 @@
     width:800px;
 }
 
+/* mbti 버튼 */
+
 .mbti{
     margin-top:3px;
-    width:50px;
+    width:100px;
     height:40px;
     border: 1px solid #a33333;
-    border-radius: 20%;
-    padding-left:7px;
-    padding-top:5px;
+    border-radius: 5%;
+    background-color:white;
+    margin-right:10px;
 }
-
-.mbti .btn-more{
-    color: #333;
-    font-size: 14px;
-    text-align: center;
+.mbti:hover{
+    background-color:#A33333;
+    color:white;
 }
 
 .drink-rank{
@@ -57,6 +57,7 @@
     height:500px;
     padding-top:5px;
     margin:10px auto 0 auto;
+    border-bottom:1px solid #a33333;
 
 }
 .drink-rank ul{
@@ -68,10 +69,24 @@
     padding:10px 0 10px 0;
     width:230px;
     height:400px;
-    background-color: white;
+    background-color: #A33333;
     border-radius: 5%;
-    border: 1px solid rgb(206, 206, 206);
+    border: 1px solid #a33333;
 }
+
+/* 랭크 이동 */
+.rank{
+    margin-top:-10px;
+    margin-bottom: 10px;
+    width:100%;
+    height:50px;
+    text-align: center;
+    font-family: "행복고흥B";
+    font-size: 60px;
+    color:white;
+}
+
+
 .rank-photo{
     margin: auto;
     height: 200px;
@@ -80,6 +95,7 @@
 .rank-photo > img{
     height: 100%;
     width: 100%;
+    background-color:white;
 }
 
 .drink-rank .rank-text{
@@ -95,37 +111,26 @@
 .drink-rank .rank-text .rank-text-title p{
     font-size: 1.1em;
     color:black;
+    color:white;
 }
 
+/* 별 모양 */
 .drink-rank .rank-text .rank-text-star{
     text-align: center;
 }
 
 .drink-rank .rank-text .rank-text-star i{
-    color:#a33333;
+    color:white;
 }
 
-
-/* 랭크 이동 */
-.rank{
-    margin-top:-10px;
-    margin-bottom: 10px;
-    width:100%;
-    height:50px;
-    text-align: center;
-    font-family: "행복고흥B";
-    font-size: 60px;
-}
 
 
 /* 드링크 */
 .drink-all{
-    border-top:1px solid #a33333;
     margin: 0 auto;
     width:1320px;
 }
 .drink{
-    border-bottom:1px solid #eee;
     width:1300px;
     height:100px;
     display: flex;
@@ -160,13 +165,15 @@
     height:20px;
     font-size:14px;
     color:#333;
-    margin-bottom:10px;
+    margin-top:10px;
+    line-height: 15px;
 }
 
 .drink-raw + div{
     display:flex;
     font-size:16px;
     text-align: center;
+    margin-top: 15px;
 }
 
 .drink-raw + div span{
@@ -181,7 +188,7 @@
     height:20px;
 }
 .drink-score{
-    width:80px;
+    width:130px;
     height:20px;
 }
 
