페이징 페이지 css 수정, href 수정

--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -72,7 +72,7 @@
                     </a>
                     <ul class="nav">
                         <li class="scroll-to-section"><a href="introduction.ejs">Introduction</a></li>
-                        <li class="scroll-to-section" id="item"><a href="map.html">Recommendation</a></li>
+                        <li class="scroll-to-section" id="item"><a href="http://localhost:3000/map">Recommendation</a></li>
                         <li class="scroll-to-section"><a href="http://localhost:3000/drink/page=1">Drinks</a></li>
                         <li class="scroll-to-section"><a href="community.ejs">Community</a></li>
                         <!--<li class="scroll-to-section"><a href="#Review">Review</a></li>-->
