--- a/server/views/map.ejs
+++ b/server/views/map.ejs
@@ -68,7 +68,7 @@
             <div class="map-content-left-content">
                 <!-- 결과 -->
                 <div class="predict-result" id="label-container"></div>
-                <div class="map-content-photo"><img src="https://lh5.googleusercontent.com/p/AF1QipNuB4vPM8W9ckzwEifRp0KpccPFLHhqDsUEmuaT=w1080-k-no"></div>
+                <div class="map-content-photo"><img src="<%=foods.food_img%>"></div>
                 <div class="restaurant-title">Recommended restaurants</div>
                 <div class="restaurant">
                     <input type="checkbox" id="restaurant-content-btn">
@@ -179,19 +179,15 @@
     <footer><%-include('footer.ejs')-%></footer>
 
 
-    <script src="../vendor/jquery/jquery.min.js"></script>
-    <script src="../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/index.js" defer type="text/javascript"></script>
-    <script src="../js/custom.js"></script>
-    <script src="../js/animation.js"></script>
-    <script src="../js/imagesloaded.js"></script>
-    <script src="../js/owl-carousel.js"></script>
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
     <script
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCL8p9j7Ox3DZIPCM1NO_7gC7xFqGTkpgE&region=KR"></script>
-    <script src="js/map.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="js/map.js" defer></script>
 
 </body>
 
