값은 가져와졌다 그다음은???ccc

--- a/server/views/map.ejs
+++ b/server/views/map.ejs
@@ -68,7 +68,9 @@
             <div class="map-content-left-content">
                 <!-- 결과 -->
                 <div class="predict-result" id="label-container"></div>
-                <div class="map-content-photo"><img src="<%=foods.food_img%>"></div>
+                <div class="map-content-photo"><img id="main_pic" src=""></div>
+                <!--음식설명-->
+                <div class="food-content"></div>
                 <div class="restaurant-title">Recommended restaurants</div>
                 <div class="restaurant">
                     <input type="checkbox" id="restaurant-content-btn">
