--- a/server/views/drink-page.ejs
+++ b/server/views/drink-page.ejs
@@ -36,7 +36,7 @@
     <input type="text" placeholder="search" title="검색" id="inp_search" autocomplete="off">
     <a href="" class="btn_search"><i class="bi bi-search" style="color: rgb(206, 206, 206);"></i></a>
     <div class="oo"></div>
-    <button type="button" class="mbti" onclick = "location.href = 'mbti.ejs' " >MBTI</button>
+    <button type="button" class="mbti" onclick = "location.href = 'mbti' " >MBTI</button>
 </div>
 
 
