--- a/server/views/map.ejs
+++ b/server/views/map.ejs
@@ -68,6 +68,7 @@
             <div class="map-content-left-content">
                 <!-- 결과 -->
                 <div class="predict-result" id="label-container"></div>
+<!--         id main pic       src에 food_img-->
                 <div class="map-content-photo"><img id="main_pic" src=""></div>
                 <!--음식설명-->
                 <div class="food-content"></div>
@@ -179,6 +180,9 @@
 
     <!---------------------------------- 푸터 ---------------------------------->
     <footer><%-include('footer.ejs')-%></footer>
+
+
+
 
 
     <script src="vendor/jquery/jquery.min.js"></script>
